# book_code

./: .gitignore  books.rb
Railsnatra/: 2_railsnatra.rb  3_config.ru  3_railsnatra.rb
ahmine2/code/: CanaryLinks.txt  PortingGuide.txt  mkplugin.sh
bhh52e/code/: INSTRUCTIONS.txt  index.html  package.json  server
btrubyclo/code/: complement.rb  freevar.rb  freevar_id.rb  freevar_id_2.rb  freevar_id_3.rb
d-dsbackm/code/: index.html
dcbang/code/: angular_example.html  bootstrap_example.html
dcbang2/code/: bootstrap_example.html  (+1 more)
fr_secure/code/sso/spnegotokenhandler/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  libtool
fr_secure/code/sso/spnegotokenhandler/autom4te.cache/: output.0  output.1  output.2  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
fr_secure/code/sso/spnegotokenhandler/config/: ltmain.sh
fr_secure/code/sso/spnegotokenhandler/lib/: Makefile.am  Makefile.in  derparse.c  spnego.c
fr_secure/code/sso/spnegotokenhandler/src/: Makefile  Makefile.am  configure.scan  derparse.h  main.c  spnego.h  spnegoparse.c  spnegoparse.h
fr_secure/code/sso/spnegotokenhandler/src/.deps/: derparse.Plo  derparse.Po  main.Po  spnego.Plo  spnego.Po  spnegoparse.Plo  spnegoparse.Po
fr_secure/code/sso/spnegotokenhandler/src/.libs/: libspnego.dylib  libspnego.lai
fr_secure/code/sso/spnegotokenhandler/src/.libs/libspnego.0.dylib.dSYM/Contents/: Info.plist
fr_secure/code/sso/spnegotokenhandler/src/.libs/libspnego.0.dylib.dSYM/Contents/Resources/DWARF/: libspnego.0.dylib
(+20867 files in other folders)
